  incorrectly. That is, if you typed "+9.5G" as the partition end point,
  you'd end up with something just 9 sectors in size. This version now
  truncates decimal numbers to their integral values, so you'd get a 9 GiB
  partition instead.

- Changes to optimize disk handling, particularly on Windows, courtesy of
  Frediano Ziglio.

- Numerous new partition type codes from Discoverable Partitions Specification
  (https://uapi-group.org/specifications/specs/discoverable_partitions_specification/).

1.0.9 (4/14/2022):
------------------

- Removed stray debugging code that caused "partNum is {x}" to be printed
  when changing a partition's name with sgdisk (-c/--change-name).

- Added support for aligning partitions' end points, as well as their start
  points. This support affects the default partition size when using 'n' in
  gdisk; it affects the default partition size in cgdisk; and it's activated
  by the new '-I' option in sgdisk. See the programs' respective man pages
  for details. This feature is intended to help with LUKS2 encryption, which
  reacts badly to partitions that are not sized as exact multiples of the
  encryption block size.

- Added check for too-small disks (most likely to be an issue when trying
  to use a too-small disk image); program now aborts if this happens.

- Added the ability to build sgdisk and cgdisk for Windows.

- Added new type codes:
  * FreeBSD nandfs (0xa506)
  * Apple APFS Pre-Boot (0xaf0b)
  * Apple APFS Recovery (0xaf0c)
  * ChromeOS firmware (0x7f03)
  * ChromeOS mini-OS (0x7f04)
  * ChromeOS hibernate (0x7f05)
  * U-Boot boot loader (0xb000)
  * 27 (!) codes for Fuchsia (0xf100 to 0xf11a)

- Fixed build problems with recent versions of ncurses.

- Fixed bug that caused cgdisk to report incorrect partition attributes.

- Consolidated Makefiles for Linux, FreeBSD, Solaris, macOS, and Windows
  (32- and 64-bit). The old OS-specific Makefiles remain in case the new